--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -1,14 +1,15 @@
 <% include ../partials/html_head %>
 
 <header class="defqon-header">
-  <img src="/images/logo_phb_small.png" /> <img src="/images/defqon.svg" />
-  <nav class="defqon-header-nav">
+  <img src="/images/logo_phb_small.png" />
+  <!-- <img src="/images/defqon.svg" /> -->
+<!--   <nav class="defqon-header-nav">
     <ul class="defqon-header-links reset-list">
       <li>
         <i class="icon-alarm"></i>  <a href="http://www.defqon1.nl/wp-content/uploads/ARTISTS_SCHEMAV2.jpeg" data-lightbox="image-1" data-title="Broadcast Line-Up">Line-Up</a>
       </li>
     </ul>
-  </nav>
+  </nav> -->
 </header>
 
 <main class="defqon-content" ng-controller="defqon.controller">
