--- a/views/partials/html_head.ejs
+++ b/views/partials/html_head.ejs
@@ -10,13 +10,13 @@
   <meta name="fragment"              content="!" />
 
   <!-- facebook metatags -->
-  <meta property="og:title"       content="PHB Live - Projeto Hardstyle Brasil e Eurodance.com.br">
+  <meta property="og:title"       content="Rádio PHB Live - Projeto Hardstyle Brasil e Eurodance.com.br">
   <meta property="og:url"         content="http://defqon2015.herokuapp.com/">
   <meta property="og:image"       content="http://defqon2015.herokuapp.com/images/logo_phb.jpg">
   <meta property="og:description" content="Ouça ao vivo o melhor do Hardstyle mixados pelo DJ Adriano Fernandes">
-  <meta property="og:site_name"   content="PHB Live - Projeto Hardstyle Brasil e Eurodance.com.br">
+  <meta property="og:site_name"   content="Rádio PHB Live - Projeto Hardstyle Brasil e Eurodance.com.br">
   <meta property="og:type"        content="website">
-  <title>PHB Live - Projeto Hardstyle Brasil e Eurodance.com.br</title>
+  <title>Rádio PHB Live - Projeto Hardstyle Brasil e Eurodance.com.br</title>
   <link rel="stylesheet" href="stylesheets/application.css">
   <script src="https://cdn.socket.io/socket.io-1.1.0.js" charset="utf-8"></script>
 </head>
