--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -19,7 +19,7 @@
       <!-- <iframe width="100%" src="https://www.youtube.com/embed/7T0NrGr8d-c" frameborder="0" allowfullscreen></iframe> -->
     </div>
     <div class="defqon-chat">
-      <iframe src="http://tlk.io/defqon2015" class="" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
+      <iframe src="http://tlk.io/phb" class="" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
     </div>
   </section>
   <section class="defqon-feed">
