--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -2,24 +2,24 @@
 
 <header class="defqon-header">
   <img src="/images/logo_phb_small.png" />
-  <!-- <img src="/images/defqon.svg" /> -->
-<!--   <nav class="defqon-header-nav">
+  <img src="/images/defqon.svg" />
+  <nav class="defqon-header-nav">
     <ul class="defqon-header-links reset-list">
       <li>
         <i class="icon-alarm"></i>  <a href="http://www.defqon1.nl/wp-content/uploads/ARTISTS_SCHEMAV2.jpeg" data-lightbox="image-1" data-title="Broadcast Line-Up">Line-Up</a>
       </li>
     </ul>
-  </nav> -->
+  </nav>
 </header>
 
 <main class="defqon-content" ng-controller="defqon.controller">
   <section class="defqon-player-chat">
     <div class="defqon-player">
-      <iframe src="https://mixlr.com/users/3764931/embed" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
-      <!-- <iframe width="100%" src="https://www.youtube.com/embed/7T0NrGr8d-c" frameborder="0" allowfullscreen></iframe> -->
+      <!-- <iframe src="https://mixlr.com/users/3764931/embed" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe> -->
+      <iframe src="http://www.twitch.tv/beatport/embed" frameborder="0" scrolling="no" width="100%"></iframe>
     </div>
     <div class="defqon-chat">
-      <iframe src="http://tlk.io/phb" class="" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
+      <iframe src="http://tlk.io/defqon2015" class="" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
     </div>
   </section>
   <section class="defqon-feed">
