--- a/views/partials/html_head.ejs
+++ b/views/partials/html_head.ejs
@@ -5,18 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
   <meta name="viewport"              content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="cleartype"       content="on">
-  <meta name="description"           content="Acompanhe o rebroadcast do Defqon.1 2015 com a gente.">
+  <meta name="description"           content="O Projeto Hardstyle Brasil foi idealizado para apoiar e desenvolver o cenário Hard Dance Music no Brasil.">
   <meta name="keywords"              content="qdance defqon1 hardstyle phb dq1">
   <meta name="fragment"              content="!" />
 
   <!-- facebook metatags -->
-  <meta property="og:title"       content="Rebroadcast Defqon.1 2015 - Projeto Hardstyle Brasil e Eurodance.com.br">
+  <meta property="og:title"       content="Projeto Hardstyle Brasil e Eurodance.com.br">
   <meta property="og:url"         content="http://defqon2015.herokuapp.com/">
   <meta property="og:image"       content="http://defqon2015.herokuapp.com/images/share_fb.jpg">
-  <meta property="og:description" content="Acompanhe o rebroadcast do Defqon.1 2015 com a gente.">
-  <meta property="og:site_name"   content="Rebroadcasting Defqon.1 2015 - Projeto Hardstyle Brasil e Eurodance.com.br">
+  <meta property="og:description" content="O Projeto Hardstyle Brasil foi idealizado para apoiar e desenvolver o cenário Hard Dance Music no Brasil.">
+  <meta property="og:site_name"   content="Projeto Hardstyle Brasil e Eurodance.com.br">
   <meta property="og:type"        content="website">
-  <title>Rebroadcast Defqon.1 2015 - Projeto Hardstyle Brasil e Eurodance.com.br</title>
+  <title>Projeto Hardstyle Brasil e Eurodance.com.br</title>
   <link rel="stylesheet" href="stylesheets/application.css">
   <script src="https://cdn.socket.io/socket.io-1.1.0.js" charset="utf-8"></script>
 </head>
