--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -15,7 +15,7 @@
 <main class="defqon-content" ng-controller="defqon.controller">
   <section class="defqon-player-chat">
     <div class="defqon-player">
-      <iframe width="100%" src="https://www.mixcloud.com/widget/iframe/?embed_type=widget_standard&amp;embed_uuid=1381ea6d-22d8-4959-b051-3d4947b7c9c2&amp;feed=https%3A%2F%2Fwww.mixcloud.com%2Fdjadriano%2Fhands-up-in-the-air-30%2F&amp;hide_cover=1&amp;light=1&amp;replace=0" frameborder="0"></iframe>
+      <audio class="html5player" id="stream-player" style="height: 0px; width: 0px;"><source src="http://streamcluster02.true.nl:8000/qdance-hard"></audio>
       <!-- <iframe src="https://mixlr.com/users/3764931/embed" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe> -->
     </div>
     <div class="defqon-chat">
