--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -15,7 +15,9 @@
 <main class="defqon-content" ng-controller="defqon.controller">
   <section class="defqon-player-chat">
     <div class="defqon-player">
-      <audio class="html5player" id="stream-player" style="height: 0px; width: 0px;"><source src="http://streamcluster02.true.nl:8000/qdance-hard"></audio>
+      <audio autoplay="autoplay" controls="controls">
+        <source src="http://streamcluster02.true.nl:8000/qdance-hard">
+      </audio>
       <!-- <iframe src="https://mixlr.com/users/3764931/embed" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe> -->
     </div>
     <div class="defqon-chat">
