--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -15,6 +15,7 @@
 <main class="defqon-content" ng-controller="defqon.controller">
   <section class="defqon-player-chat">
     <div class="defqon-player">
+      <h2>Dominator Festival Live</h2>
       <audio autoplay="autoplay" controls="controls">
         <source src="http://streamcluster02.true.nl:8000/qdance-hard">
       </audio>
