--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -15,11 +15,11 @@
 <main class="defqon-content" ng-controller="defqon.controller">
   <section class="defqon-player-chat">
     <div class="defqon-player">
-      <h2>Dominator The Hardcore Festival - Live</h2>
+<!--       <h2>Dominator The Hardcore Festival - Live</h2>
       <audio autoplay="autoplay" controls="controls">
         <source src="http://streamcluster02.true.nl:8000/qdance-hard">
-      </audio>
-      <!-- <iframe src="https://mixlr.com/users/3764931/embed" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe> -->
+      </audio> -->
+      <iframe src="https://mixlr.com/users/3764931/embed" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
     </div>
     <div class="defqon-chat">
       <iframe src="http://tlk.io/phb" class="" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
