--- a/views/partials/html_head.ejs
+++ b/views/partials/html_head.ejs
@@ -10,13 +10,13 @@
   <meta name="fragment"              content="!" />
 
   <!-- facebook metatags -->
-  <meta property="og:title"       content="Dominator The Hardcore Festival - Projeto Hardstyle Brasil e Eurodance.com.br">
+  <meta property="og:title"       content="PHB Live - Projeto Hardstyle Brasil e Eurodance.com.br">
   <meta property="og:url"         content="http://defqon2015.herokuapp.com/">
-  <meta property="og:image"       content="http://defqon2015.herokuapp.com/images/dominator_share.jpg">
+  <meta property="og:image"       content="http://defqon2015.herokuapp.com/images/phb_share.jpg">
   <meta property="og:description" content="O Projeto Hardstyle Brasil foi idealizado para apoiar e desenvolver o cenário Hard Dance Music no Brasil.">
   <meta property="og:site_name"   content="Projeto Hardstyle Brasil e Eurodance.com.br">
   <meta property="og:type"        content="website">
-  <title>Dominator The Hardcore Festival - Projeto Hardstyle Brasil e Eurodance.com.br</title>
+  <title>PHB Live - Projeto Hardstyle Brasil e Eurodance.com.br</title>
   <link rel="stylesheet" href="stylesheets/application.css">
   <script src="https://cdn.socket.io/socket.io-1.1.0.js" charset="utf-8"></script>
 </head>
