--- a/views/partials/html_head.ejs
+++ b/views/partials/html_head.ejs
@@ -12,7 +12,7 @@
   <!-- facebook metatags -->
   <meta property="og:title"       content="The Qontinent Festival - Projeto Hardstyle Brasil e Eurodance.com.br">
   <meta property="og:url"         content="http://harddance.com.br">
-  <meta property="og:image"       content="http://harddance.com.br/images/share_fb.jpg">
+  <meta property="og:image"       content="http://harddance.com.br/images/share_fb.png">
   <meta property="og:description" content="O Projeto Hardstyle Brasil foi idealizado para apoiar e desenvolver o cenário Hard Dance Music no Brasil.">
   <meta property="og:site_name"   content="Projeto Hardstyle Brasil e Eurodance.com.br">
   <meta property="og:type"        content="website">
