--- a/views/partials/html_head.ejs
+++ b/views/partials/html_head.ejs
@@ -16,7 +16,7 @@
   <meta property="og:description" content="O Projeto Hardstyle Brasil foi idealizado para apoiar e desenvolver o cenário Hard Dance Music no Brasil.">
   <meta property="og:site_name"   content="Projeto Hardstyle Brasil e Eurodance.com.br">
   <meta property="og:type"        content="website">
-  <title>The Qontinent Festival - Projeto Hardstyle Brasil e Eurodance.com.br</title>
+  <title>({{new_photos_counter}}) The Qontinent Festival - Projeto Hardstyle Brasil e Eurodance.com.br</title>
   <link rel="stylesheet" href="stylesheets/application.css">
   <script src="https://cdn.socket.io/socket.io-1.1.0.js" charset="utf-8"></script>
 </head>
