--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -15,11 +15,11 @@
 <main class="defqon-content" ng-controller="defqon.controller">
   <section class="defqon-player-chat">
     <div class="defqon-player">
-<!--       <h2>Dominator The Hardcore Festival - Live</h2>
+      <h2>Decibel Outdoor Festival</h2>
       <audio autoplay="autoplay" controls="controls">
-        <source src="http://streamcluster02.true.nl:8000/qdance-hard">
-      </audio> -->
-      <iframe src="https://mixlr.com/users/3764931/embed" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
+        <source src="http://audio.true.nl/b2s">
+      </audio>
+      <!-- <iframe src="https://mixlr.com/users/3764931/embed" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe> -->
       <!-- <iframe width="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/111026046&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe> -->
     </div>
     <div class="defqon-chat">
