--- a/views/partials/html_head.ejs
+++ b/views/partials/html_head.ejs
@@ -10,13 +10,13 @@
   <meta name="fragment"              content="!" />
 
   <!-- facebook metatags -->
-  <meta property="og:title"       content="Decibel Outdoor Festival - Projeto Hardstyle Brasil e Eurodance.com.br">
+  <meta property="og:title"       content="Mysteryland Festival Netherlands - Projeto Hardstyle Brasil e Eurodance.com.br">
   <meta property="og:url"         content="http://harddance.com.br">
   <meta property="og:image"       content="http://harddance.com.br/images/share_fb_2.png">
   <meta property="og:description" content="O Projeto Hardstyle Brasil foi idealizado para apoiar e desenvolver o cenário Hard Dance Music no Brasil.">
   <meta property="og:site_name"   content="Projeto Hardstyle Brasil e Eurodance.com.br">
   <meta property="og:type"        content="website">
-  <title>({{new_photos_counter}}) Decibel Outdoor Festival - Projeto Hardstyle Brasil e Eurodance.com.br</title>
+  <title>({{new_photos_counter}}) Mysteryland Festival Netherlands - Projeto Hardstyle Brasil e Eurodance.com.br</title>
   <link rel="stylesheet" href="stylesheets/application.css">
   <script src="https://cdn.socket.io/socket.io-1.1.0.js" charset="utf-8"></script>
 </head>
