--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -62,6 +62,9 @@
         </div>
       </li>
     </ul>
+    <div class="defqon-see-more">
+      <button class="defqon-see-more-btn" ng-click="getOldPhotos()">Veja mais</button>
+    </div>
   </section>
 </main>
 
