--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -267,3 +267,7 @@ figure { margin: 0; }
 .defqon-notification-new-photo { position: fixed; display: none; text-align: center; background: #eee; color: #cc152a; padding: 1.25rem; z-index: 999; width: 100%; left: 0; bottom: 0; border-top: 1px solid #e9e9e9; cursor: pointer; text-transform: uppercase; }
 .defqon-notification-new-photo.show { display: block; }
 .defqon-notification-new-photo .defqon-notification-counter { border-radius: 30px; padding: 0.375rem 0.625rem; background: #cc152a; color: #fff; margin-left: 0.3125rem; }
+
+.defqon-see-more { text-align: center; padding: 2.5rem 0; }
+.defqon-see-more .defqon-see-more-btn { background: red; color: #fff; padding: 0.625rem 1.875rem; border: 0; text-transform: uppercase; outline: 0; cursor: pointer; }
+.defqon-see-more .defqon-see-more-btn:hover { background: #cc0000; }
