--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -18,8 +18,8 @@
 <!--       <audio autoplay="autoplay" controls="controls">
         <source src="http://audio.true.nl/b2s">
       </audio> -->
-      <!-- <iframe src="https://mixlr.com/users/3764931/embed" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe> -->
-      <iframe width="100%" scrolling="no" frameborder="no" src="https://embed.ubideo.com/event/55b67cacad45774c9c8c3688"></iframe>
+      <iframe src="https://mixlr.com/users/3764931/embed" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
+      <!-- <iframe width="100%" scrolling="no" frameborder="no" src="https://embed.ubideo.com/event/55b67cacad45774c9c8c3688"></iframe> -->
     </div>
     <div class="defqon-chat">
       <iframe src="http://tlk.io/phb" class="" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
