--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -265,6 +265,7 @@ figure { margin: 0; }
   .defqon-feed .defqon-feed-list li:nth-child(3n) { margin-right: 0; } }
 @media screen and (min-width: 80rem) { .defqon-feed .defqon-feed-list { padding-right: 2%; }
   .defqon-feed .defqon-feed-list li { -webkit-box-flex: 0; -webkit-flex: 0 0 24%; -ms-flex: 0 0 24%; flex: 0 0 24%; }
+  .defqon-feed .defqon-feed-list li:nth-child(3n) { margin-right: 2%; }
   .defqon-feed .defqon-feed-list li:nth-child(4n) { margin-right: 0; } }
 
 .defqon-notification-new-photo { position: fixed; display: none; text-align: center; background: #eee; color: #cc152a; padding: 1.25rem; z-index: 999; width: 100%; left: 0; bottom: 0; border-top: 1px solid #e9e9e9; cursor: pointer; text-transform: uppercase; }
