--- a/source/stylesheets/application.scss
+++ b/source/stylesheets/application.scss
@@ -395,6 +395,10 @@ $padding-desktop: 2%;
       li {
         flex: 0 0 24%;
 
+        &:nth-child(3n) {
+          margin-right: $padding-desktop;
+        }
+
         &:nth-child(4n) {
           margin-right: 0;
         }
