--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -33,18 +33,20 @@
       <h2>
         <i class="icon-insta"></i> Realtime Feed
       </h2>
-<!--       <nav class="defqon-feed-filter">
+      <nav class="defqon-feed-filter">
         <dl class="reset-list">
           <dt>Filtre por:</dt>
-          <dd>
+          <dd ng-click="filterFeed('image')">
             <i class="icon-photo"></i> Fotos
           </dd>
-          <dd><i class="icon-movie"></i> Vídeos</dd>
+          <dd ng-click="filterFeed('video')">
+            <i class="icon-movie"></i> Vídeos
+          </dd>
         </dl>
-      </nav> -->
+      </nav>
     </div>
     <ul class="defqon-feed-list reset-list">
-      <li ng-repeat="item in arrPhotos | orderBy:'-created_time'">
+      <li ng-repeat="item in arrPhotos | orderBy:'-created_time' | filter:{ type: feedFilter }">
         <div class="defqon-feed-list-from">
           <img ng-src="{{item.user.profile_picture}}" alt="">
           <b class="defqon-feed-list-from-name">{{item.user.username}}</b>
