--- a/views/partials/html_head.ejs
+++ b/views/partials/html_head.ejs
@@ -20,4 +20,4 @@
   <link rel="stylesheet" href="stylesheets/application.css">
   <script src="https://cdn.socket.io/socket.io-1.1.0.js" charset="utf-8"></script>
 </head>
-<body>
+<body ng-controller="defqon.controller">
