--- a/views/partials/html_head.ejs
+++ b/views/partials/html_head.ejs
@@ -13,7 +13,7 @@
   <meta property="og:title"       content="Q-Dance At Tomorrowland Brasil - Projeto Hardstyle Brasil e Eurodance.com.br">
   <meta property="og:url"         content="http://harddance.com.br">
   <meta property="og:image"       content="http://harddance.com.br/images/share_fb.jpg">
-  <meta property="og:description" content="O Projeto Hardstyle Brasil foi idealizado para apoiar e desenvolver o cenário Hard Dance Music no Brasil.">
+  <meta property="og:description" content="Cobertura em tempo real em fotos e vídeos do Q-Dance Stage no Tomorrowland Brasil">
   <meta property="og:site_name"   content="Projeto Hardstyle Brasil e Eurodance.com.br">
   <meta property="og:type"        content="website">
   <title>({{new_photos_counter}}) - Q-Dance At Tomorrowland Brasil - Projeto Hardstyle Brasil e Eurodance.com.br</title>
