--- a/views/partials/html_head.ejs
+++ b/views/partials/html_head.ejs
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
   <meta name="viewport"              content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="cleartype"       content="on">
-  <meta name="description"           content="O Projeto Hardstyle Brasil foi idealizado para apoiar e desenvolver o cenário Hard Dance Music no Brasil.">
+  <meta name="description"           content="Cobertura em tempo real em fotos e vídeos do Q-Dance Stage no Tomorrowland Brasil">
   <meta name="keywords"              content="qdance defqon1 hardstyle phb dq1">
   <meta name="fragment"              content="!" />
 
