--- a/views/pages/mobile.ejs
+++ b/views/pages/mobile.ejs
@@ -16,21 +16,14 @@
 </header>
 
 <main class="defqon-content">
-  <section class="defqon-player-chat">
+<!--   <section class="defqon-player-chat">
     <div class="defqon-player">
-<!--       <audio autoplay="autoplay" controls="controls">
-        <source src="http://audio.true.nl/b2s">
-      </audio> -->
-      <!-- <iframe src="https://mixlr.com/users/3764931/embed" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe> -->
-      <!-- <iframe src="https://mixlr.com/users/3764931/embed" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe> -->
       <iframe width="100%" src="https://www.mixcloud.com/widget/iframe/?feed=https%3A%2F%2Fwww.mixcloud.com%2Fdjadriano%2Fdj-adriano-fernandes-hands-up-in-the-air-48%2F&hide_cover=1&light=1" frameborder="0"></iframe>
-      <!-- <iframe width="100%" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/111026046&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe> -->
-      <!-- <iframe width="100%" scrolling="no" frameborder="no" src="https://embed.ubideo.com/event/55b67cacad45774c9c8c3688"></iframe> -->
     </div>
     <div class="defqon-chat">
       <iframe src="http://tlk.io/phb" class="" width="100%" scrolling="no" frameborder="no" marginheight="0" marginwidth="0"></iframe>
     </div>
-  </section>
+  </section> -->
   <section class="defqon-feed">
     <div class="defqon-feed-title">
       <h2>
