--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -253,7 +253,7 @@ figure { margin: 0; }
 .defqon-feed .defqon-feed-list li .defqon-feed-list-from { padding: 1.25rem; padding-top: 0; }
 .defqon-feed .defqon-feed-list li .defqon-feed-list-from img { border-radius: 50%; display: inline-block; vertical-align: middle; margin-right: 4%; width: 3.125rem; height: 3.125rem; }
 .defqon-feed .defqon-feed-list li .defqon-feed-list-photo figure { position: relative; }
-.defqon-feed .defqon-feed-list li .defqon-feed-list-photo img { width: 100%; max-width: 100%; display: block; }
+.defqon-feed .defqon-feed-list li .defqon-feed-list-photo img { max-width: 100%; display: block; }
 .defqon-feed .defqon-feed-list li .defqon-feed-list-photo .defqon-feed-list-photo-text { padding: 1.25rem 0; color: #999; overflow: hidden; }
 .defqon-feed .defqon-feed-list li .defqon-feed-list-photo .defqon-feed-video-player { position: relative; display: none; cursor: pointer; }
 .defqon-feed .defqon-feed-list li .defqon-feed-list-photo .defqon-feed-video-player video { display: block; position: relative; width: 100% !important; height: 100% !important; }
@@ -271,10 +271,6 @@ figure { margin: 0; }
 @media screen and (min-width: 64rem) { .defqon-feed .defqon-feed-list { padding-right: 2%; }
   .defqon-feed .defqon-feed-list li { -webkit-box-flex: 0; -webkit-flex: 0 0 32%; -ms-flex: 0 0 32%; flex: 0 0 32%; }
   .defqon-feed .defqon-feed-list li:nth-child(3n) { margin-right: 0; } }
-@media screen and (min-width: 80rem) { .defqon-feed .defqon-feed-list { padding-right: 2%; }
-  .defqon-feed .defqon-feed-list li { -webkit-box-flex: 0; -webkit-flex: 0 0 23%; -ms-flex: 0 0 23%; flex: 0 0 23%; }
-  .defqon-feed .defqon-feed-list li:nth-child(3n) { margin-right: 2%; }
-  .defqon-feed .defqon-feed-list li:nth-child(4n) { margin-right: 0; } }
 
 .defqon-notification-new-photo { position: fixed; display: none; text-align: center; background: #eee; color: #cc152a; padding: 1.25rem; z-index: 999; width: 100%; left: 0; bottom: 0; border-top: 1px solid #e9e9e9; cursor: pointer; text-transform: uppercase; }
 .defqon-notification-new-photo.show { display: block; }
